--- a/about.html
+++ b/about.html
@@ -69,7 +69,8 @@ header-img: "img/post-bg-alitrip.jpg"
     // init
     _render();
 </script>
-
+<!- 实施注释 ->
+<!- 
 {% if site.duoshuo_username %}
 
 			                <!-- 多说评论框 start -->
@@ -125,3 +126,4 @@ header-img: "img/post-bg-alitrip.jpg"
 </script>
 <!-- livere 公共JS代码 end -->
 {% endif %}
+->
