--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+description: 得之我幸失之我命
 header-img: "img/home-bg-o.jpg"
 ---
 
