--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ header-img: "img/post-bg-alitrip.jpg"
 <div class="zh post-container">
 
 
-  <p> Hi，我是<Strong>King</Strong>。<br></p>
+  <p> Hi，我是<Strong>King</Strong>。<br></p>简单介绍一下我自己：2016年我于华中科技大学的电子科学与技术专业本科毕业，之后我作为模拟版图工程师工作了两年多，主要参与时钟领域的深亚微米级模拟版图设计。我目前是2020届浙江大学计算机学院软件工程学硕在读。<br></p>作为一个计算机领域的菜鸟和一个热爱生活的人，在这里我会分享一些我的个人经历，兴趣爱好，计算机相关知识等等。希望能给大家带来快乐和启发。<br></p>
   
    
 </div>
@@ -25,7 +25,9 @@ header-img: "img/post-bg-alitrip.jpg"
     <!--<blockquote><p>
     Don't let anything become a reason for not studying</p></blockquote>-->
 
-    <p> Hi, I am <Strong>King</Strong>。<br></p>
+    <p> Hi, I am <Strong>King</Strong>。<br></p>Let me briefly introduce myself: in 2016, I graduated from Huazhong University of science and technology majoring in Electronic Science and technology. After that, I worked as an analog layout engineer for more than two years, mainly involved in deep submicron analog layout design in the field of clock. At present, I am a master of software engineering in school of computer science and technology of Zhejiang University in 2020. <br></p>As a rookie in computer field and a person who loves life, I will share some personal experiences, hobbies, computer related knowledge and so on. Hope to bring you happiness and inspiration.
+
+
   
    
 </div>
